<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/textView4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#aa5f5f5f"
        android:id="@+id/customLinea"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/campo1"
        android:id="@+id/textView2"
        android:layout_below="@+id/customLinea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/paddingLabel" />

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#aa5f5f5f"
        android:id="@+id/customLinea2"
        android:layout_below="@+id/diasmin"
        android:layout_alignRight="@+id/customLinea"
        android:layout_alignEnd="@+id/customLinea"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sismax"
        android:layout_below="@+id/customLinea"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:width="@dimen/wcaja" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/campo2"
        android:id="@+id/textView7"
        android:layout_below="@+id/sismax"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/paddingLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sismin"
        android:layout_below="@+id/sismax"
        android:layout_alignRight="@+id/sismax"
        android:layout_alignEnd="@+id/sismax"
        android:width="@dimen/wcaja" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/campo3"
        android:id="@+id/textView8"
        android:layout_below="@+id/sismin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/paddingLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/diasmax"
        android:layout_below="@+id/sismin"
        android:layout_alignRight="@+id/sismin"
        android:layout_alignEnd="@+id/sismin"
        android:width="@dimen/wcaja" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/campo4"
        android:id="@+id/textView9"
        android:layout_below="@+id/diasmax"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/paddingLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/diasmin"
        android:layout_below="@+id/diasmax"
        android:layout_alignRight="@+id/diasmax"
        android:layout_alignEnd="@+id/diasmax"
        android:width="@dimen/wcaja" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Resultado"
        android:id="@+id/textView10"
        android:layout_below="@+id/customLinea2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignRight="@+id/diasmin"
        android:layout_alignEnd="@+id/diasmin"
        android:width="@dimen/wcaja" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular Operacion"
        android:id="@+id/calcular"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10" />


</RelativeLayout>
